# mcp-webscraper

./: .gitignore  Makefile  README.md  env.example  pyproject.toml  pytest.ini
docs/: MCP_INTEGRATION.md  Project plan.md  TESTING.md  architecture.md  cursor_mcp_docs.md  pypi_mcp_server_setup_docs.md  task.md
inputs/: urls.csv
src/mcp_webscraper/: __init__.py  cli.py  mcp_server.py
src/mcp_webscraper/api/: __init__.py  main.py
src/mcp_webscraper/config/: __init__.py  settings.py
src/mcp_webscraper/core/: __init__.py  anti_scraping.py  detector.py  error_handling.py  scraper.py
src/mcp_webscraper/jobs/: __init__.py  manager.py
src/mcp_webscraper/models/: __init__.py  schemas.py
tests/: __init__.py  test_api.py  test_config.py  test_core.py
